GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/Account_Product__c.object-meta.xml
<CustomObject>
    <label>Account Product</label>
    <nameField>
        <label>Invoice Line Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>