GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Account_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Product_Code__c</fullName>
    <displayFormat>B-{0000}</displayFormat>
    <label>Account Product Code</label>
    <type>AutoNumber</type>
</CustomField>