GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Account_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Product_Name__c</fullName>
    <label>Account Product Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>