GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Account_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Product_Type__c</fullName>
    <label>Account Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Action Result</fullName>
                <isActive>false</isActive>
                <label>Action Result</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>