GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Account_Product_Type_formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Product_Type_formula__c</fullName>
    <formula>TEXT(Account_Product_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Product Type</label>
    <type>Text</type>
</CustomField>