GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Action_Results__c.field-meta.xml
<CustomField>
    <fullName>Action_Results__c</fullName>
    <label>Action Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Not Home</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>HoH</fullName>
            </value>
            <value>
                <fullName>Interpreter</fullName>
            </value>
            <value>
                <fullName>Audio Request</fullName>
            </value>
            <value>
                <fullName>Video Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>