GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/ASMT_Type__c.field-meta.xml
<CustomField>
    <fullName>ASMT_Type__c</fullName>
    <label>ASMT Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face To Face</fullName>
            </value>
            <value>
                <fullName>TELE</fullName>
            </value>
            <value>
                <fullName>VID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>