GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/BLI_Identifier__c.field-meta.xml
<CustomField>
    <fullName>BLI_Identifier__c</fullName>
    <label>BLI Identifier</label>
    <length>18</length>
    <type>Text</type>
</CustomField>