GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/CUST_Request_Code__c.field-meta.xml
<CustomField>
    <fullName>CUST_Request_Code__c</fullName>
    <label>CUST Request Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>