GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/DEV_Description__c.field-meta.xml
<CustomField>
    <fullName>DEV_Description__c</fullName>
    <label>DEV Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>