GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Followup_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Followup_Frequency__c</fullName>
    <label>Followup Frequency</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>