GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Followup_Frequency_Unit__c.field-meta.xml
<CustomField>
    <fullName>Followup_Frequency_Unit__c</fullName>
    <label>Followup Frequency Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>