GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Followup_Retry__c.field-meta.xml
<CustomField>
    <fullName>Followup_Retry__c</fullName>
    <label>Followup Retry</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>