GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Type</label>
    <type>Text</type>
</CustomField>