GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Interpreter_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Rate__c</fullName>
    <formula>Customer__r.Interpreter_Rate__c</formula>
    <label>Interpreter Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>