GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Interpreter_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Rate_Type__c</fullName>
    <formula>TEXT( Customer__r.Interpreter_Rate_Type__c )</formula>
    <label>Interpreter Rate Type</label>
    <type>Text</type>
</CustomField>