GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Labor_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Labor_Rate_Code__c</fullName>
    <label>Labor Rate Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>