GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Level_3__c.field-meta.xml
<CustomField>
    <fullName>Level_3__c</fullName>
    <label>Level 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>