GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/License_REQ__c.field-meta.xml
<CustomField>
    <fullName>License_REQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License REQ</label>
    <type>Checkbox</type>
</CustomField>