GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Lowest_License_Required__c.field-meta.xml
<CustomField>
    <fullName>Lowest_License_Required__c</fullName>
    <label>Lowest License Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>LPN</fullName>
            </value>
            <value>
                <fullName>LSW</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>RVN</fullName>
            </value>
            <value>
                <fullName>LVN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>