GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/MN_Care_Tax__c.field-meta.xml
<CustomField>
    <fullName>MN_Care_Tax__c</fullName>
    <label>MN Care Tax</label>
    <length>50</length>
    <type>Text</type>
</CustomField>