GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/MOI_Feed__c.field-meta.xml
<CustomField>
    <fullName>MOI_Feed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feed</label>
    <type>Checkbox</type>
</CustomField>