GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/MOI_Portal__c.field-meta.xml
<CustomField>
    <fullName>MOI_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mode of Input: Portal</description>
    <label>Portal</label>
    <type>Checkbox</type>
</CustomField>