GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/MOI_Webservice__c.field-meta.xml
<CustomField>
    <fullName>MOI_Webservice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mode of Input: Webservice</description>
    <label>Webservice</label>
    <type>Checkbox</type>
</CustomField>