GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/MOI_Windows_Intake__c.field-meta.xml
<CustomField>
    <fullName>MOI_Windows_Intake__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Windows Intake</label>
    <type>Checkbox</type>
</CustomField>