GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Nurse_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Rate_Type__c</fullName>
    <description>Claims Nurse Rate Types</description>
    <label>Nurse Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ASMT_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benefit Interview</fullName>
            </value>
            <value>
                <fullName>Comprehensive Interview</fullName>
            </value>
            <value>
                <fullName>Comprehensive No POC</fullName>
            </value>
            <value>
                <fullName>Eligibility Verification</fullName>
            </value>
            <value>
                <fullName>Facility Evaluation</fullName>
            </value>
            <value>
                <fullName>ICG Interview</fullName>
            </value>
            <value>
                <fullName>Onsite CC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>