GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/OPS_Description__c.field-meta.xml
<CustomField>
    <fullName>OPS_Description__c</fullName>
    <label>OPS Description</label>
    <type>TextArea</type>
</CustomField>