GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Output_Assessment_Report__c.field-meta.xml
<CustomField>
    <fullName>Output_Assessment_Report__c</fullName>
    <label>Assessment Report</label>
    <length>50</length>
    <type>Text</type>
</CustomField>