GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Output_Authorization_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Output_Authorization_Sheet__c</fullName>
    <label>Authorization Sheet</label>
    <length>50</length>
    <type>Text</type>
</CustomField>