GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Output_Cog_Exam__c.field-meta.xml
<CustomField>
    <fullName>Output_Cog_Exam__c</fullName>
    <label>Cog Exam</label>
    <length>50</length>
    <type>Text</type>
</CustomField>