GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Output_Cover_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Output_Cover_Sheet__c</fullName>
    <label>Cover Sheet</label>
    <length>50</length>
    <type>Text</type>
</CustomField>