GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Output_Data_Feed__c.field-meta.xml
<CustomField>
    <fullName>Output_Data_Feed__c</fullName>
    <label>Data Feed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type</fullName>
            </value>
            <value>
                <fullName>Format</fullName>
            </value>
            <value>
                <fullName>Data Dictionary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>