GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Output_Facility_License_Info__c.field-meta.xml
<CustomField>
    <fullName>Output_Facility_License_Info__c</fullName>
    <label>Facility License Info</label>
    <length>50</length>
    <type>Text</type>
</CustomField>