GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Output_Main__c.field-meta.xml
<CustomField>
    <fullName>Output_Main__c</fullName>
    <label>Main</label>
    <length>50</length>
    <type>Text</type>
</CustomField>