GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Output_MCAS_Score_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Output_MCAS_Score_Sheet__c</fullName>
    <label>MCAS Score Sheet</label>
    <length>50</length>
    <type>Text</type>
</CustomField>