GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Output_Medical_Records__c.field-meta.xml
<CustomField>
    <fullName>Output_Medical_Records__c</fullName>
    <label>Medical Records</label>
    <length>50</length>
    <type>Text</type>
</CustomField>