GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Output_Report_Memo__c.field-meta.xml
<CustomField>
    <fullName>Output_Report_Memo__c</fullName>
    <label>Report Memo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>