GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Output_Telephonic_Report__c.field-meta.xml
<CustomField>
    <fullName>Output_Telephonic_Report__c</fullName>
    <label>Telephonic Report</label>
    <length>50</length>
    <type>Text</type>
</CustomField>