GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Partial__c.field-meta.xml
<CustomField>
    <fullName>Partial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partial</label>
    <type>Checkbox</type>
</CustomField>