GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Price_Break_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Price_Break_Level_1__c</fullName>
    <formula>IF(ISPICKVAL( ASMT_Type__c , &apos;F2F&apos;) ,Customer__r.F2F_Level_1__c ,  IF(ISPICKVAL( ASMT_Type__c , &apos;TELE&apos;),  Customer__r.Tele_Level_1__c ,  IF(ISPICKVAL( ASMT_Type__c , &apos;VID&apos;),  Customer__r.Vid_Level_1__c , null) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Break Level 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>