GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/QA_Number_per_Month__c.field-meta.xml
<CustomField>
    <fullName>QA_Number_per_Month__c</fullName>
    <label>QA Number/Month</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>