GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/QA_per_Month__c.field-meta.xml
<CustomField>
    <fullName>QA_per_Month__c</fullName>
    <label>QA per Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>