GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/QA_Percent_per_Month__c.field-meta.xml
<CustomField>
    <fullName>QA_Percent_per_Month__c</fullName>
    <label>QA Percent/Month</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>