GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/QA_REQ__c.field-meta.xml
<CustomField>
    <fullName>QA_REQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA REQ</label>
    <type>Checkbox</type>
</CustomField>