GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/QA_Request_Trigger__c.field-meta.xml
<CustomField>
    <fullName>QA_Request_Trigger__c</fullName>
    <label>QA Request Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before</fullName>
            </value>
            <value>
                <fullName>After</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>