GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Revenue_Account__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Account__c</fullName>
    <label>Revenue Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>