GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Service_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Product_Code__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Product Code</label>
    <type>Text</type>
</CustomField>