GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Tele_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Tele_Level_3__c</fullName>
    <formula>Customer__r.Tele_Level_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tele Level 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>