GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/Triggered__c.field-meta.xml
<CustomField>
    <fullName>Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triggered</label>
    <type>Checkbox</type>
</CustomField>