GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/fields/updateAP__c.field-meta.xml
<CustomField>
    <fullName>updateAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you want to Update All Account Produt</label>
    <type>Checkbox</type>
</CustomField>