GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/recordTypes/Claims.recordType-meta.xml
<RecordType>
    <fullName>Claims</fullName>
    <active>true</active>
    <description>Account Product for Claims Accounts</description>
    <label>Claims</label>
</RecordType>