GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/recordTypes/Underwriting.recordType-meta.xml
<RecordType>
    <fullName>Underwriting</fullName>
    <active>true</active>
    <description>Account Product for Underwriting Account</description>
    <label>Underwriting</label>
</RecordType>