GloablServices/keshavglobal/force-app/main/default/objects/Account_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Customer__c</columns>
    <columns>BLI_Identifier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>